--- a/rest-client/client/src/main/resources/endpoints.properties
+++ b/rest-client/client/src/main/resources/endpoints.properties
@@ -8,7 +8,7 @@
 # - you will fail early 
 # - provide correct default values with a commit and without need 
 #   an ops guy to do manual work
-# - have your own (in development) classes act special
+# - have your own (in development) classes connect to special endpoints
 #
 
 rest.default.endpoint=http://xkcd.org:80
