add example implementation in client

--- a/rest-client/client/src/main/resources/endpoints.properties
+++ b/rest-client/client/src/main/resources/endpoints.properties
@@ -11,6 +11,9 @@
 # - have your own (in development) classes connect to special endpoints
 #
 
-rest.default.endpoint=http://xkcd.org:80
+rest.default.creationStrategy=de.servicezombie.samples.rest_client.RestEasyJaxRsCreationStrategy.RestEasyJaxRsCreationStrategy
+
+rest.default.endpoint=http://xkcd.com:80
 rest.group.internal.endpoint=http://internal.xkcd.org:80
 rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.endpoint=http://localhost:80
+rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.application=
