--- a/rest-client/transfer/pom.xml
+++ b/rest-client/transfer/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.servicezombie.samples</groupId>
@@ -18,5 +19,11 @@
 			<scope>provided</scope>
 			<!-- <version>2.0</version> from parent, but to keep it visible -->
 		</dependency>
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<!-- <version>2.1</version> from parent, but to keep it visible -->
+		</dependency>
+
 	</dependencies>
 </project>
