enable createWebClient to use interfaces without JAX-RS, which are configured on properties base

--- a/rest-client/client/src/main/resources/endpoints.properties
+++ b/rest-client/client/src/main/resources/endpoints.properties
@@ -13,7 +13,14 @@
 
 rest.default.creationStrategy=de.servicezombie.samples.rest_client.RestEasyJaxRsCreationStrategy.RestEasyJaxRsCreationStrategy
 
-rest.default.endpoint=http://xkcd.com:80
+rest.default.endpoint=http://localhost:80
 rest.group.internal.endpoint=http://internal.xkcd.org:80
-rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.endpoint=http://localhost:80
-rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.application=
+
+# endpoint + application + path-from-code => Result URI
+rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.endpoint=http://xkcd.com:80
+
+# optional
+#rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.application=
+
+# can be overwritten from external, default group is local
+rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.group=local
