add an interface w/o jaxrs to create the webtarget

--- a/rest-client/client/src/main/resources/endpoints.properties
+++ b/rest-client/client/src/main/resources/endpoints.properties
@@ -18,6 +18,7 @@ rest.group.internal.endpoint=http://internal.xkcd.org:80
 
 # endpoint + application + path-from-code => Result URI
 rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.endpoint=http://xkcd.com:80
+rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpointDefiniton.endpoint=http://xkcd.com:80
 
 # optional
 #rest.type.de.servicezombie.samples.xkcd_transfer.XkcdComInfoEndpoint.application=
